--- a/client/public/css/queries.css
+++ b/client/public/css/queries.css
@@ -3,6 +3,12 @@
 
 @media screen and (min-device-width: 890px), screen and (min-width: 890px) {
 
+  :root {
+    --heading-size: 3rem;
+    --logo-size: 2rem;
+    --subheading-size: 1.5rem;
+  }
+
   .flex-column {
     flex-direction: column;
     align-items: center;
@@ -34,6 +40,13 @@
     -ms-flex: 0 0 23%;
     flex: 0 0 23%;
     max-width: 23%;
+  }
+
+  .span-1-of-5 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 19.6%;
+    flex: 0 0 19.6%;
+    max-width: 19.6%;
   }
 
   .span-2-of-3 {
