--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --heading-size: 3rem;
-    --logo-size: 2rem;
+    --heading-size: 2rem;
+    --logo-size: 1.75rem;
     --subheading-size: 1.5rem;
     --font-size: 1.1rem;
     --padding-vertical: 3.5rem;
@@ -40,7 +40,7 @@ html {
 }
 
 body {
-    font-family: "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+    font-family: "Poppins", "Helvetica Neue", Arial, "Noto Sans", sans-serif;
     font-size: var(--font-size);
     font-weight: 400;
     line-height: 1.55;
@@ -58,14 +58,17 @@ h1, h2, h3 {
 
 h1 {
     font-size: var(--heading-size);
+    line-height: 1.2;
 }
 
 h2 {
     font-size: var(--logo-size);
+    line-height: 1.2;
 }
 
 h3 {
     font-size: var(--subheading-size);
+    line-height: 1.2;
 }
 
 p {
@@ -84,6 +87,14 @@ a:active {
 
 a:hover {
     color: var(--brand-color);
+}
+
+li {
+    list-style: none;
+}
+
+.bullets li:before {
+    content: '✦ ';
 }
 
 section {
@@ -156,8 +167,13 @@ section {
     justify-content: center;
     border-radius: 220px;
     width: 100%;
+    padding: 0.7rem 1.5rem;
     color: var(--text-primary);
     background-color: var(--bg-primary);
+    border: 1px solid var(--brand-color);
+}
+
+.btn:hover {
     box-shadow: var(--shadow-raised);
 }
 
@@ -195,4 +211,14 @@ input, select, textarea {
     width: 100%;
     resize: none;
     padding: var(--margin);
+}
+
+/* Site related CSS */
+
+.buttons {
+    padding: 1rem 0rem;
+}
+
+.buttons .btn {
+    margin-bottom: 1rem;
 }
